syntax = "proto3";

package rate;

// TODO: Implement me

service Rate {
	rpc GetRates(Request) returns (Result);
}

message Request {
	repeated string hotelIds = 1;
	string InDate = 2;
	string OutDate = 3;
}

message Result {
	repeated RatePlan RatePlans = 1;	
}

message RatePlan {
	string HotelId = 1;
	string Code = 2;
	string InDate = 3;
	string OutDate = 4;
	RoomType roomType = 5;
}

message RoomType {
	float BookableRate = 1;
	string Code = 2;
	string RoomDescription = 3;
	float TotalRate = 4;
	float TotalRateInclusive = 5;
}
